# VoteTrackerPlus

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: codeql-analysis.yml
docs/: E2EV.md  Overview.md  design-notes.md  informal-security-description.md  informal-security-overview.md  one-page-investor-summary.md  pitch.md  pitch.txt  project-overview-layperson.md  project-overview.md  tech-overview.md  voter-check-details.md  voter-check-overview.md  voter-iterim-check-details.md  voter-iterim-check-overview.md  voter-provisional-check-overview.md  voter-receipt-details.md  voter-receipt-overview.md
docs/UX/: UVBM-voting.md  election-official-overview.md  general-UX-overview.md  gerrymandering-overview.md  in-person-voting.double-checkin.md  in-person-voting.md  in-person-voting.single-checkin.md  overview.md  votes.pov.md
docs/UX/defunct/: UVBM voting.md  UVBM-voting.md  absentee-voting.md  the-other-way.md
docs/futures/: README.md  project-overview.md
docs/tech/: GGO-address-maps.md  executable-overview.md  github-devsecops-overview.md  more-tech-details.md  tech-overview.md  voter-receipt-details.md
docs/tech-details/: GGO-address-maps-overview.md  executable-overview.md  github-devsecops-overview.md  more-tech-details.md  voter-receipt-details.md
kickstarter/: ks-storyline.txt  ks-videoboard.txt  photo-credits.txt  project-FAQ.txt  project-description.txt  project-risks.md  project-risks.txt  project-story.md  risks-and-challenges.txt  short-blurb.txt  video-electionwonk.txt  video-endvoter.txt
src/vtp/: README.md  accept_ballot.py  address.py  ballot.py  cast_ballot.py  common.py  contest.py  create_blank_ballot.py  election_config.py  generate_all_blank_ballots.py  merge_contests.py  run_mock_election.py  setup_vtp_demo.py  show_contest.py  tally_contests.py  verify_ballot_receipt.py  vote.py
src/vtp/cli/: _arguments.py  accept_ballot.py  cast_ballot.py  create_blank_ballot.py  generate_all_blank_ballots.py  merge_contests.py  run_mock_election.py  setup_vtp_demo.py  show_contest.py  tally_contests.py  verify_ballot_receipt.py  vote.py
src/vtp/core/: address.py  ballot.py  common.py  contest.py  election_config.py  tally.py  webapi.py
src/vtp/ops/: accept_ballot_lib.py  accept_ballot_operation.py  cast_ballot_lib.py  cast_ballot_operation.py  create_blank_ballot_operation.py  merge_contests_lib.py  (+12 more)
test/: test_versions.py
unreviewed/: design-notes.md
(+16 files in other folders)
