[tool.poetry]
name = "votetrackerplus"
version = "0.1.0"
description = "VoteTracker+ - a distributed, open-source, public ballot and Cast Vote Record integrity and tracking system"
authors = ["Sandy Currier <windoverwater@users.noreply.github.com>"]
license = "GPL-2.0"
readme = "README.md"
packages = [
  { include = "vtp", from = "src" }
  # { include = "electos/vtp", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.3"
pytest = "^7.2.0"
pyyaml = "^6.0"
networkx = "^2.8.6"
pyinputplus = "^0.2.12"

[tool.poetry.dev-dependencies]
sphinx = "^5.3.0"

[tool.poetry.scripts]
accept-ballot = "vtp.accept_ballot:main"
cast-ballot = "vtp.cast_ballot:main"
create-blank-ballot = "vtp.create_blank_ballot:main"
generate-all-blank-ballots = "vtp.generate_all_blank_ballots:main"
merge-contests = "vtp.merge_contests:main"
run-mock-election = "vtp.run_mock_election:main"
setup-vtp-demo = "vtp.setup_vtp_demo:main"
show-contest = "vtp.show_contest:main"
tally-contests = "vtp.tally_contests:main"
verify-ballot-receipt = "vtp.verify_ballot_receipt:main"
vote = "vtp.vote:main"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
